// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<Card
  extraClassNames="InlineReferenceCard"
  padding="default"
  selected={false}
  testId="cf-ui-card"
>
  <CSSTransition
    classNames={
      Object {
        "enter": "InlineReferenceCard__spinner--enter",
        "enterActive": "InlineReferenceCard__spinner--enter-active",
        "exit": "InlineReferenceCard__spinner--exit",
        "exitActive": "InlineReferenceCard__spinner--exit-active",
      }
    }
    mountOnEnter={true}
    timeout={100}
    unmountOnExit={true}
  >
    <div
      className="InlineReferenceCard__skeleton-wrapper"
    >
      <ReferenceCardSkeleton />
    </div>
  </CSSTransition>
  <div
    className="InlineReferenceCard__status-indicator"
  />
  <span
    className="InlineReferenceCard__text-wrapper"
  >
    Title of inline reference
  </span>
</Card>
`;

exports[`renders the component with a dropdown 1`] = `
<Card
  extraClassNames="InlineReferenceCard my-extra-class"
  padding="default"
  selected={false}
  testId="cf-ui-card"
>
  <CSSTransition
    classNames={
      Object {
        "enter": "InlineReferenceCard__spinner--enter",
        "enterActive": "InlineReferenceCard__spinner--enter-active",
        "exit": "InlineReferenceCard__spinner--exit",
        "exitActive": "InlineReferenceCard__spinner--exit-active",
      }
    }
    mountOnEnter={true}
    timeout={100}
    unmountOnExit={true}
  >
    <div
      className="InlineReferenceCard__skeleton-wrapper"
    >
      <ReferenceCardSkeleton />
    </div>
  </CSSTransition>
  <div
    className="InlineReferenceCard__status-indicator"
  />
  <span
    className="InlineReferenceCard__text-wrapper"
  >
    Title of inline reference
  </span>
  <Dropdown
    extraClassNames="InlineReferenceCard__dropdown"
    isOpen={false}
    onClose={[Function]}
    position="bottom-right"
    testId="cf-ui-dropdown"
    toggleElement={
      <IconButton
        buttonType="secondary"
        disabled={false}
        extraClassNames="InlineReferenceCard__icon-button"
        iconProps={
          Object {
            "icon": "MoreHorizontal",
          }
        }
        label="Inline reference actions"
        onClick={[Function]}
        testId="cf-ui-icon-button"
        withDropdown={false}
      />
    }
  >
    <DropdownList
      extraClassNames="InlineReferenceCard__dropdown-list"
      testId="cf-ui-dropdown-list"
    >
      <DropdownListItem
        isActive={false}
        isDisabled={false}
        isTitle={false}
        key="edit"
        onClick={[Function]}
        testId="cf-ui-dropdown-list-item"
      >
        Edit
      </DropdownListItem>
      <DropdownListItem
        isActive={false}
        isDisabled={false}
        isTitle={false}
        key="remove"
        onClick={[Function]}
        testId="cf-ui-dropdown-list-item"
      >
        Remove
      </DropdownListItem>
    </DropdownList>
  </Dropdown>
</Card>
`;

exports[`renders the component with an additional class name 1`] = `
<Card
  extraClassNames="InlineReferenceCard my-extra-class"
  padding="default"
  selected={false}
  testId="cf-ui-card"
>
  <CSSTransition
    classNames={
      Object {
        "enter": "InlineReferenceCard__spinner--enter",
        "enterActive": "InlineReferenceCard__spinner--enter-active",
        "exit": "InlineReferenceCard__spinner--exit",
        "exitActive": "InlineReferenceCard__spinner--exit-active",
      }
    }
    mountOnEnter={true}
    timeout={100}
    unmountOnExit={true}
  >
    <div
      className="InlineReferenceCard__skeleton-wrapper"
    >
      <ReferenceCardSkeleton />
    </div>
  </CSSTransition>
  <div
    className="InlineReferenceCard__status-indicator"
  />
  <span
    className="InlineReferenceCard__text-wrapper"
  >
    Title of inline reference
  </span>
</Card>
`;

exports[`renders the component with published status 1`] = `
<Card
  extraClassNames="InlineReferenceCard my-extra-class"
  padding="default"
  selected={false}
  testId="cf-ui-card"
>
  <CSSTransition
    classNames={
      Object {
        "enter": "InlineReferenceCard__spinner--enter",
        "enterActive": "InlineReferenceCard__spinner--enter-active",
        "exit": "InlineReferenceCard__spinner--exit",
        "exitActive": "InlineReferenceCard__spinner--exit-active",
      }
    }
    mountOnEnter={true}
    timeout={100}
    unmountOnExit={true}
  >
    <div
      className="InlineReferenceCard__skeleton-wrapper"
    >
      <ReferenceCardSkeleton />
    </div>
  </CSSTransition>
  <div
    className="InlineReferenceCard__status-indicator InlineReferenceCard__status-indicator--published"
  />
  <span
    className="InlineReferenceCard__text-wrapper"
  >
    Title of inline reference
  </span>
</Card>
`;
